# content-synergy

./: README.md  pyproject.toml
src/content_synergy/: crew.py  main.py
